--- a/src/main/webapp/room.html
+++ b/src/main/webapp/room.html
@@ -240,7 +240,7 @@
                     $.ajax({
                         url: api.roomDelete,
                         data: {
-                            byId: JSON.stringify([data.roomId])
+                            byId: JSON.stringify([data.id])
                         },
                         type: 'POST',
                         dataType: 'json',
