--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -55,9 +55,11 @@
 </div>
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     {{#  if(d.id !== 1 ){ }}
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    {{# } else { }}
+    超级管理员禁止操作
     {{# } }}
 </script>
 <script>
