--- a/src/main/webapp/iframe_accounts.html
+++ b/src/main/webapp/iframe_accounts.html
@@ -108,7 +108,7 @@
 
             $.when(
                 $.ajax({url: api.queryOrderById, type: 'POST', dataType: 'json', data: {alCode: alRoomCode}}),
-                $.ajax({url: api.jointHousingt, type: 'POST', dataType: 'json', data: {roomId: roomId}})
+                $.ajax({url: api.jointHousingt, type: 'POST', dataType: 'json', data: {alCode: alRoomCode}})
             ).then(function (v1, v2) {
                 caaountsTop.reload({data: v1[0].data});
                 caaountsBottom.reload({data: v2[0].data});
