--- a/src/main/webapp/chart.html
+++ b/src/main/webapp/chart.html
@@ -122,18 +122,18 @@
             if (tt == '') {
 
                 var date = new Date();
-                var startTime = DateToLStr5(date);
-                var endTime = DateToLStr5(new Date(date.getTime() + (86400000 * 7)));
+                var startTime = DateToLStr4(date);
+                var endTime = DateToLStr4(new Date(date.getTime() + (86400000 * 7)));
                 obj = {
                     checkTime: startTime,
                     endTime: endTime
                 }
-                $("#test6").val(DateToLStr5(new Date()).split(" ")[0] + " - " + DateToLStr5(new Date(Date.now() + (86400000 * 7))).split(" ")[0])
+                $("#test6").val(DateToLStr4(new Date()).split(" ")[0] + " - " + DateToLStr4(new Date(Date.now() + (86400000 * 7))).split(" ")[0])
 
             } else {
                 obj = {
-                    checkTime: DateToLStr5(new Date(tt.split(" - ")[0])),
-                    endTime: DateToLStr5(new Date(tt.split(" - ")[1]))
+                    checkTime: DateToLStr4(new Date(tt.split(" - ")[0])),
+                    endTime: DateToLStr4(new Date(tt.split(" - ")[1]))
                 }
             }
             var index = layer.load(1,{time:10*1000});
@@ -214,13 +214,13 @@
              var urll = api.reportList;
             var tt = $("#test6").val();
             if (tt == '') {
-                var startTime = DateToLStr3(new Date()).replace(/\//g,"-");
-                var endTime = DateToLStr3(new Date(Date.now() + (86400000 * 7))).replace(/\//g,"-");
+                var startTime = DateToLStr3(new Date());
+                var endTime = DateToLStr3(new Date(Date.now() + (86400000 * 7)));
                 urll += "?checkTime=" + startTime + "&endTime=" + endTime;
                 $("#test6").val(DateToLStr(new Date()).split(" ")[0] + " - " + DateToLStr(new Date(Date.now() + (86400000 * 7))).split(" ")[0])
 
             } else {
-                urll += "?checkTime=" + DateToLStr3(new Date(tt.split(" - ")[0])).replace(/\//g,"-") + "&endTime=" + DateToLStr3(new Date(tt.split(" - ")[1])).replace(/\//g,"-");
+                urll += "?checkTime=" + DateToLStr3(new Date(tt.split(" - ")[0])) + "&endTime=" + DateToLStr3(new Date(tt.split(" - ")[1]));
             }
             var index = layer.load(1,{time:10*1000});
             $.getJSON(urll + "&random=" + Date.now(), function (rs) {
